# OOP_Labs

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile
Lab1/: CMakeLists.txt  README.md  main.cpp  report_lab1.md
Lab1/include/: solve_func.h
Lab1/src/: solve_func.cpp
Lab1/test/: tests01.cpp
Lab2/: CMakeLists.txt  README.md  main.cpp
Lab2/include/: solve_func.h
Lab2/src/: solve_func.cpp
Lab2/test/: test_func.cpp  test_func.h  tests01.cpp
Lab3/: CMakeLists.txt  README.md  main.cpp
Lab3/include/: figure.h  geometry_utils.h  pentagon.h  rhombus.h  solve_func.h  trapezoid.h
Lab3/src/: geometry_utils.cpp  pentagon.cpp  rhombus.cpp  solve_func.cpp  trapezoid.cpp
Lab3/test/: tests01.cpp
Lab4/: CMakeLists.txt  README.md  main.cpp
Lab4/include/: array.h  figure.h  geometry_utils.h  pentagon.h  point.h  rhombus.h  solve_func.h  trapezoid.h
Lab4/test/: tests01.cpp
Lab5/: CMakeLists.txt  README.md  main.cpp
Lab5/include/: custom_memory_resource.h  my_struct.h  solve_func.h  stack.h
Lab5/src/: custom_memory_resource.cpp  my_struct.cpp
Lab5/test/: tests01.cpp
Lab6/: CMakeLists.txt  README.md  main.cpp
Lab6/include/: Bear.h  Game_functions.h  NPC.h  Observer.h  Ork.h  Squirrel.h  Visitors.h
Lab6/src/: Bear.cpp  Factory.cpp  Game_functions.cpp  Observer.cpp  Ork.cpp  Squirrel.cpp  Visitors.cpp
Lab6/test/: tests01.cpp
Lab7/: CMakeLists.txt  README.md  main.cpp
Lab7/include/: Bear.h  Factory.h  Game_functions.h  NPC.h  Observer.h  Ork.h  Squirrel.h  Visitors.h
Lab7/src/: Bear.cpp  Game_functions.cpp  Observer.cpp  Ork.cpp  Squirrel.cpp  Visitors.cpp
Lab7/test/: tests01.cpp
Lab7_Hard/: CMakeLists.txt  README.md  main.cpp
Lab7_Hard/include/: Bear.h  Factory.h  Game_functions.h  NPC.h  Observer.h  Ork.h  Squirrel.h  Visitors.h
Lab7_Hard/src/: Bear.cpp  Factory.cpp  Game_functions.cpp  Observer.cpp  Ork.cpp  Squirrel.cpp  Visitors.cpp
Lab7_Hard/test/: tests01.cpp
